crates/parsing/src/grammar/snapshots/parsing__grammar__tests__type-declaration-simple-type.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: module A where

type A = A

Start { kind: Module }
  Start { kind: ModuleHeader }
    Token { kind: ModuleKw }
    Start { kind: ModuleName }
      Start { kind: Name }
        Token { kind: Upper }
      Finish
    Finish
    Token { kind: WhereKw }
  Finish
  Token { kind: LayoutStart }
  Start { kind: ModuleImports }
  Finish
  Start { kind: ModuleBody }
    Start { kind: TypeDeclaration }
      Token { kind: TypeKw }
      Start { kind: Name }
        Token { kind: Upper }
      Finish
      Start { kind: SynonymVariables }
      Finish
      Token { kind: Equal }
      Start { kind: ConstructorType }
        Start { kind: QualifiedName }
          Start { kind: NameRef }
            Token { kind: Upper }
          Finish
        Finish
      Finish
    Finish
  Finish
  Token { kind: LayoutEnd }
Finish
