crates/parsing/src/grammar/snapshots/parsing__grammar__tests__type-declaration-with-generics.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: module A where

type A a a = A

Start { kind: Module }
  Start { kind: ModuleHeader }
    Token { kind: ModuleKw }
    Start { kind: ModuleName }
      Start { kind: Name }
        Token { kind: Upper }
      Finish
    Finish
    Token { kind: WhereKw }
  Finish
  Token { kind: LayoutStart }
  Start { kind: ModuleImports }
  Finish
  Start { kind: ModuleBody }
    Start { kind: TypeDeclaration }
      Token { kind: TypeKw }
      Start { kind: Name }
        Token { kind: Upper }
      Finish
      Start { kind: SynonymVariables }
        Start { kind: TypeVariableName }
          Start { kind: Name }
            Token { kind: Lower }
          Finish
        Finish
        Start { kind: TypeVariableName }
          Start { kind: Name }
            Token { kind: Lower }
          Finish
        Finish
      Finish
      Token { kind: Equal }
      Start { kind: ConstructorType }
        Start { kind: QualifiedName }
          Start { kind: NameRef }
            Token { kind: Upper }
          Finish
        Finish
      Finish
    Finish
  Finish
  Token { kind: LayoutEnd }
Finish
