crates/parsing/src/grammar/snapshots/parsing__grammar__tests__unqualified.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: (+) Foo bar

Start { kind: ApplicationExpression }
  Start { kind: OperatorNameExpression }
    Start { kind: QualifiedName }
      Token { kind: LeftParenthesis }
      Start { kind: NameRef }
        Token { kind: Operator }
      Finish
      Token { kind: RightParenthesis }
    Finish
  Finish
  Start { kind: ArgumentList }
    Start { kind: TermArgument }
      Start { kind: ConstructorExpression }
        Start { kind: QualifiedName }
          Start { kind: NameRef }
            Token { kind: Upper }
          Finish
        Finish
      Finish
    Finish
    Start { kind: TermArgument }
      Start { kind: VariableExpression }
        Start { kind: QualifiedName }
          Start { kind: NameRef }
            Token { kind: Lower }
          Finish
        Finish
      Finish
    Finish
  Finish
Finish
