crates/parsing/src/grammar/snapshots/parsing__grammar__tests__variable-binder.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: f
Start { kind: VariableBinder }
  Start { kind: Name }
    Token { kind: Lower }
  Finish
Finish
