crates/parsing/src/grammar/snapshots/parsing__grammar__tests__wildcard-binder.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: _
Start { kind: WildcardBinder }
  Token { kind: Underscore }
Finish
