crates/parsing/src/grammar/snapshots/parsing__grammar__tests__wildcard.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: _ -> _

Start { kind: ArrowType }
  Start { kind: WildcardType }
    Token { kind: Underscore }
  Finish
  Token { kind: RightArrow }
  Start { kind: WildcardType }
    Token { kind: Underscore }
  Finish
Finish
